# haskellRedisExample

./: README.md  novus.cabal  package.yaml  stack.yaml
app/: Main.hs
